Refactor header handling to use unified Headers class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aliyun-oss-x"
-version = "0.1.0"
+version = "0.1.1"
 description = "Aliyun OSS SDK for Python with async support"
 authors = [{ name = "Anderson", email = "andersonby@163.com" }]
 dependencies = ["httpx[http2]>=0.27.2", "pycryptodome>=3.21.0", "crcmod>=1.7"]
@@ -25,3 +25,6 @@ excludes = ["tests"]
 [tool.pdm.scripts]
 test.cmd = "python"
 test.env_file = ".env"
+
+[tool.ruff]
+target-version = "py310"
